--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ GEMINI_API_KEY=AIzaSyC83AY7WDibXU0cgttKO4vQoPh1WrtcS0E
 # Replace with your Azure Cosmos DB connection string
 MONGODB_URI=mongodb+srv://naamasharir:dijma7-bozxuK-punbev@cosmosdb-chats.mongocluster.cosmos.azure.com/fin-copilot?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000
 
+# Frontend URL for production deployment
+FRONTEND_URL=https://yellow-river-01e099d03.1.azurestaticapps.net
+
 # Environment
-NODE_ENV=development
+NODE_ENV=production
 PORT=3001
